workspaces/diff-engine/src/commands/snapshots/optic_diff_engine__commands__shape__test__can_handle_add_field_command__non_object_shape_result.snap
---
source: workspaces/diff-engine/src/commands/shape.rs
expression: non_object_shape_result.unwrap_err()
---
Validation(
    "Command failed validation: shape must support fields to add field, \"AddField(AddField { field_id: \\\"field_2\\\", shape_id: \\\"shape_2\\\", name: \\\"username\\\", shape_descriptor: FieldShapeFromShape(FieldShapeFromShape { field_id: \\\"field_2\\\", shape_id: \\\"shape_3\\\" }) })\"",
)
