workspaces/diff-engine/src/commands/snapshots/optic_diff_engine__commands__shape__test__can_handle_add_field_command__unexisting_field_shape_result.snap
---
source: workspaces/diff-engine/src/commands/shape.rs
expression: unexisting_field_shape_result.unwrap_err()
---
Validation(
    "Command failed validation: shape of shape descriptor must exist to add field, \"AddField(AddField { field_id: \\\"field_2\\\", shape_id: \\\"shape_1\\\", name: \\\"username\\\", shape_descriptor: FieldShapeFromShape(FieldShapeFromShape { field_id: \\\"field_2\\\", shape_id: \\\"not-a-shape\\\" }) })\"",
)
